setting up controllers according openapi, changing mappers and deleting dto's
