# src/main/java/org/pepo/record/controller/ArtistController.java
@@ -1,57 +1,54 @@
 package org.pepo.record.controller;
 
-import org.pepo.record.dto.ArtistDto;
-import org.pepo.record.entity.Artist;
+import org.pepo.record.SwaggerCodgen.api.ArtistApi;
+import org.pepo.record.SwaggerCodgen.model.ArtistResponseOpenApi;
+import org.pepo.record.mapper.ArtistEntityOpenApiMapper;
 import org.pepo.record.service.artist.ArtistService;
 import org.pepo.record.utils.ResponseUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
 @RestController
-@RequestMapping(path = "/artist")
-public class ArtistController {
+public class ArtistController implements ArtistApi {
 
     @Autowired
     private ArtistService artistService;
 
-    @GetMapping(path="/all")
-    public ResponseEntity<Iterable<ArtistDto>> getAllArtists() {
-        return ResponseUtils.createResponse(artistService.findAll(), HttpStatus.OK);
-    }
+    @Autowired
+    private ArtistEntityOpenApiMapper artistEntityOpenApiMapper;
 
-    @GetMapping(path="/{artistId}")
-    public ResponseEntity<ArtistDto> getArtistById(@PathVariable int artistId) {
-        return ResponseUtils.createResponse(artistService.findById(artistId), HttpStatus.OK);
-    }
-
-    @GetMapping(path="/secured/{artistId}")
-    public ResponseEntity<ArtistDto> getArtistByIdSecured(@PathVariable int artistId) {
-        return ResponseUtils.createResponse(artistService.findByIdSecured(artistId), HttpStatus.OK);
-    }
-
-    @PostMapping(path = "/new")
-    public ResponseEntity<ArtistDto> newArtist(@RequestBody Artist newArtist) {
-        return ResponseUtils.createResponse(artistService.save(newArtist), HttpStatus.OK);
-    }
-
-    @DeleteMapping(path="/{artistId}")
-    public ResponseEntity<Void> deleteArtistById(@PathVariable int artistId) {
+    @Override
+    public ResponseEntity<Void> deleteArtistById(final Integer artistId) {
         artistService.delete(artistId);
-        return ResponseUtils.createResponse(null, HttpStatus.OK);
+        return ResponseUtils.createResponse(null, HttpStatus.NO_CONTENT);
     }
 
-    @PutMapping(path="/{artistId}")
-    public ResponseEntity<Void> updateArtistById(@PathVariable int artistId, @RequestBody Artist updatedArtist) {
-        artistService.update(updatedArtist, artistId);
-        return ResponseUtils.createResponse(null, HttpStatus.OK);
+    @Override
+    public ResponseEntity<List<ArtistResponseOpenApi>> getAllArtists() {
+        List<ArtistResponseOpenApi> result =
+                StreamSupport.stream(artistService.findAll().spliterator(), false)
+                        .collect(Collectors.toList());
+        return ResponseEntity.ok(result);
+    }
+
+    @Override
+    public ResponseEntity<ArtistResponseOpenApi> getArtistById(final Integer artistId) {
+        return ResponseEntity.ok(artistService.findById(artistId));
+    }
+
+    @Override
+    public ResponseEntity<ArtistResponseOpenApi> newArtist(final ArtistResponseOpenApi artistResponseOpenApi) {
+        return ResponseEntity.ok(artistService.save(artistEntityOpenApiMapper.artistResponseOpenApiToArtist(artistResponseOpenApi)));
+    }
+
+    @Override
+    public ResponseEntity<ArtistResponseOpenApi> updateArtistById(final Integer artistId, final ArtistResponseOpenApi artistResponseOpenApi) {
+        return ResponseEntity.ok(artistService.update(artistEntityOpenApiMapper.artistResponseOpenApiToArtist(artistResponseOpenApi), artistId));
     }
 }
