# src/main/java/org/pepo/record/controller/NationalityController.java
@@ -1,32 +1,36 @@
 package org.pepo.record.controller;
 
-import org.pepo.record.dto.NationalityDto;
-import org.pepo.record.entity.Nationality;
+import org.pepo.record.SwaggerCodgen.api.NationalityApi;
+import org.pepo.record.SwaggerCodgen.model.NationalityResponseOpenApi;
+import org.pepo.record.mapper.NationalityEntityOpenApiMapper;
 import org.pepo.record.service.nationality.NationalityService;
-import org.pepo.record.utils.ResponseUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
 @RestController
-@RequestMapping(path = "/nationality")
-public class NationalityController {
+public class NationalityController implements NationalityApi {
 
     @Autowired
     private NationalityService nationalityService;
 
-    @GetMapping(path="/all")
-    public ResponseEntity<Iterable<NationalityDto>> getAllNationalities() {
-        return ResponseUtils.createResponse(nationalityService.findAll(), HttpStatus.OK);
+    @Autowired
+    private NationalityEntityOpenApiMapper nationalityEntityOpenApiMapper;
+
+    @Override
+    public ResponseEntity<List<NationalityResponseOpenApi>> getAllNationalities() {
+        List<NationalityResponseOpenApi> result =
+                StreamSupport.stream(nationalityService.findAll().spliterator(), false)
+                        .collect(Collectors.toList());
+        return ResponseEntity.ok(result);
     }
 
-    @PostMapping(path = "/new")
-    public ResponseEntity<NationalityDto> newArtist(@RequestBody Nationality newNationality) {
-        return ResponseUtils.createResponse(nationalityService.save(newNationality), HttpStatus.OK);
+    @Override
+    public ResponseEntity<NationalityResponseOpenApi> newNationality(NationalityResponseOpenApi nationalityResponseOpenApi) {
+        return ResponseEntity.ok(nationalityService.save(nationalityEntityOpenApiMapper.nationalityResponseOpenApiToNationality(nationalityResponseOpenApi)));
     }
 }
