# src/main/java/org/pepo/record/mapper/ArtistEntityDtoMapper.java
@@ -1,19 +1,0 @@
-package org.pepo.record.mapper;
-
-import org.mapstruct.Mapper;
-import org.pepo.record.dto.ArtistDto;
-import org.pepo.record.entity.Artist;
-
-@Mapper(componentModel = "spring")
-public class ArtistEntityDtoMapper {
-
-    public ArtistDto artistToArtistDto(Artist artist) {
-        return ArtistDto.builder()
-                .id(artist.getId())
-                .name(artist.getName())
-                .style(artist.getStyle() != null ? artist.getStyle().getName() : null)
-                .nationality(artist.getNationality() != null ? artist.getNationality().getName() : null)
-                .build();
-    }
-
-}
