# src/main/java/org/pepo/record/mapper/ArtistEntityOpenApiMapper.java
@@ -1,0 +1,13 @@
+package org.pepo.record.mapper;
+
+import org.mapstruct.Mapper;
+import org.pepo.record.SwaggerCodgen.model.ArtistResponseOpenApi;
+import org.pepo.record.entity.Artist;
+
+@Mapper(componentModel = "spring")
+public interface ArtistEntityOpenApiMapper {
+
+    ArtistResponseOpenApi artistToArtistResponseOpenApi(Artist artist);
+
+    Artist artistResponseOpenApiToArtist(ArtistResponseOpenApi artistResponseOpenApi);
+}
