# src/main/java/org/pepo/record/mapper/NationalityEntityDtoMapper.java
@@ -1,11 +1,0 @@
-package org.pepo.record.mapper;
-
-import org.mapstruct.Mapper;
-import org.pepo.record.dto.NationalityDto;
-import org.pepo.record.entity.Nationality;
-
-@Mapper(componentModel = "spring")
-public interface NationalityEntityDtoMapper {
-
-    NationalityDto nationalityToNationalityDto(Nationality nationality);
-}
