# src/main/java/org/pepo/record/mapper/StyleEntityOpenApiMapper.java
@@ -1,0 +1,13 @@
+package org.pepo.record.mapper;
+
+import org.mapstruct.Mapper;
+import org.pepo.record.SwaggerCodgen.model.StyleResponseOpenApi;
+import org.pepo.record.entity.Style;
+
+@Mapper(componentModel = "spring")
+public interface StyleEntityOpenApiMapper {
+
+    StyleResponseOpenApi styleToStyleResponseOpenApi(Style style);
+
+    Style styleResponseOpenApiToStyle(StyleResponseOpenApi styleResponseOpenApi);
+}
